# ProjectAstrum

./: .gitignore  .project  CROSS_PLATFORM.md  Formulas  GLFWTest.java  PRE-DEVELOPMENT_PLAN.md  README.md  build.gradle  local.properties  settings.gradle  spec.md
Formulas/: FormulaPart1.txt
astrum-android/: build.gradle  proguard-rules.pro
astrum-android/src/main/: AndroidManifest.xml
astrum-android/src/main/cpp/: CMakeLists.txt  astrum-native.cpp
astrum-android/src/main/res/values/: strings.xml
astrum-api/: .project  build.gradle
astrum-client/: .project  build.gradle
astrum-common/: .project  build.gradle
astrum-common/src/main/java/io/github/auburn/: FastNoiseLite.java
astrum-core/: .project  build.gradle
astrum-core/src/main/java/astrum/core/: ECS.java  SafetyGuardian.java
astrum-engine/: .project  build.gradle
astrum-engine/src/main/java/astrum/engine/: VulkanRenderer.java
astrum-engine/src/main/resources/shaders/: legacy.frag  legacy.vert
astrum-game/: build.gradle
astrum-game/src/main/java/astrum/game/: Main.java
astrum-game/src/main/java/astrum/world/: Chunk.java  World.java
astrum-infiniminer/: build.gradle
astrum-security/: .project  build.gradle
astrum-security/src/main/resources/: security_categories.txt
astrum-server/: .project  build.gradle
astrum-web/: .project  build.gradle
astrum-world/: .project  build.gradle
gradle/: libs.versions.toml
old-code-resused/: FastNoiseLite.java  HashUtils.java  InputManager.java  SafetyGuardian.java  SessionManager.java
src/main/java/com/novusforge/astrum/core/: ECS.java  (+18 more)
(+123 files in other folders)
